fixed some Checkstyle and FindBugs findings